crates/nirvash-macros/tests/fixtures/derive_signature_custom_with_bounds.stderr
error: #[finite_model_domain(custom)] cannot be combined with bounds, filter, range, or #[finite_model_domain_invariant(...)] helpers
 --> tests/fixtures/derive_signature_custom_with_bounds.rs:5:8
  |
5 | struct State {
  |        ^^^^^
